name:           reflex-paint
version:        0.1.0.0
synopsis:       Reflex Paint
license:        AllRightsReserved
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      Jonathan Knowles
category:       Painting
build-type:     Simple
cabal-version:  >= 1.10

library
    hs-source-dirs:     source/library
    exposed-modules:    Paint.WebInterface
    build-depends:      base            >= 4.7      && < 5,
                        containers      >= 0.5.7.1  && < 1,
                        ghcjs-base      >= 0.2.0.0  && < 1,
                        ghcjs-dom       >= 0.2.4.0  && < 1,
                        reflex          >= 0.5.0    && < 1,
                        reflex-dom      >= 0.4      && < 1,
                        text            >= 1.2.1.1  && < 2
    default-language:   Haskell2010

executable web
    hs-source-dirs:     source/web
    main-is:            Paint.hs
    build-depends:      reflex-paint
    default-language:   Haskell2010

test-suite test
    hs-source-dirs:     source/test
    main-is:            Test.hs
    build-depends:      reflex-paint
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0

